<resources>
    <string name="app_name">ActivHome</string>
    <string name="action_settings">Settings</string>
    <string name="no_wifi">Oops ! You must activate your WIFI or Cellular Data</string>
    <string name="no_prefs">No preferences set!</string>
    <string name="no_prefs_button">Go to preferences</string>
    <string name="label_network">Network</string>
    <string name="key_shared_prefs">fr.geringan.activdash.sharedprefs</string>

    <string name="key_base_url">baseUrl</string>
    <string name="key_api_domain">apiDomain</string>
    <string name="key_node_port">nodePort</string>
    <string name="key_entrypoint_url">entryPointUrl</string>

    <string name="title_base_url">Base Url</string>
    <string name="title_api_domain">API Domain</string>
    <string name="title_node_port">Node Port</string>
    <string name="title_entrypoint_url">Entrypoint Url</string>

    <string name="summary_base_url">example = http://domusbox</string>
    <string name="summary_api_domain">example = activapi/api</string>
    <string name="summary_node_port">example = 5901</string>
    <string name="summary_entrypoint_url">example = activapi/api</string>

    <string name="default_base_url">http://domusbox</string>
    <string name="default_api_domain">activapi/api</string>
    <string name="default_node_port">5901</string>
    <string name="default_entrypoint_url">activapi/api</string>

    <string name="http_bad_response_error">An error %1$s occurred!</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Name</string>
    <string name="http_query">Http query</string>
    <string name="activ_server">ActivServer</string>

    <string name="chart_today">Today</string>
    <string name="chart_yesterday">Yesterday</string>
    <string name="chart_week">Week</string>
    <string name="chart_month">Month</string>

    <string name="thermostat">Thermostat</string>
    <string name="thermostat_minus">-</string>
    <string name="thermostat_plus">+</string>
    <string name="thermostat_consigne" translatable="false">----</string>

    <string name="thermometer_value" translatable="false">----</string>

    <string name="thermostat_mode_name">NONE</string>
    <string name="thermostat_plan_name">NONE</string>
    <string name="thermostat_state_name">NONE</string>


    <string name="title_activity_thermostat_controller">Thermostat</string>
    <string name="play_widget_icon">Play widget icon</string>
    <string name="item_capteur_name">Name</string>
    <string name="texte_example">text</string>
    <string name="refresh">Refresh</string>
    <string name="scenarios">Scenarios</string>
    <string name="actuators">Actuators</string>
    <string name="sensors">Sensors</string>
    <string name="graphs">Charts</string>
    <string name="node_disconnected">Node disconnected</string>
    <string name="action">Action</string>
    <string name="node_timeout">Node Timeout!</string>
    <string name="node_connected">Node Connected!</string>
    <string name="wifi_enabled">Wifi enabled</string>
    <string name="mobile_data_enabled">Mobile data enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="wifi_state_change">android.net.wifi.STATE_CHANGE</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="node_status" translatable="false">node status</string>
    <string name="node_connection">Connecting to node…</string>
    <string name="select_a_plan">Select a plan</string>
    <string name="select_a_mode">Select a mode</string>
    <string name="about">About…</string>
    <string name="no_version_found">No version found</string>
    <string name="remaining_time" translatable="false">00:00:00</string>
    <string name="text" translatable="false">text</string>
    <string name="serialport">Serialport</string>
    <string name="reset">Reset</string>
    <string name="thermostat_widget_mode_image" translatable="false">thermostat widget mode image</string>
    <string name="thermostat_widget_etat_image" translatable="false">thermostat widget etat image</string>
    <string name="sensor">Sensor</string>
    <string name="undefined" translatable="false">Undefined</string>

    <string name="title_graphs_activity" translatable="false">Graphs</string>
    <string name="main_scrollview" translatable="false">main scrollview</string>
    <string name="value1_example" translatable="false">18.2 °C</string>
    <string name="value2_example" translatable="false">85 %</string>

</resources>
