<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scenario_widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/smokeWhite"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/scenario_widget_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:contentDescription="@string/play_widget_icon"
        android:src="@mipmap/ic_play" />

    <TextView
        android:id="@+id/scenario_widget_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:contentDescription="@string/appwidget_text"
        android:gravity="center"
        android:text="@string/appwidget_text"
        android:textColor="@color/smokeWhite"
        android:textSize="12sp"
        />
</LinearLayout>