<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="?android:selectableItemBackground"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageCapteur"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionneur_icon_minheight"
        android:gravity="center_vertical"
        android:src="@mipmap/ic_thermometer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNameCapteur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/item_capteur_name"
        android:textAppearance="?attr/textAppearanceListItem"
        tools:ignore="NestedWeights" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textValue1Capteur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:text="@string/value1_example"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/capteur_value_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textValue2Capteur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/value2_example"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/capteur_value_size" />
</LinearLayout>


