<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_graphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionMenu
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        fab:menu_animationDelayPerItem="20"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccent"
        fab:menu_colorRipple="@color/smokeWhite"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_colorRipple="@color/smokeWhite"
            fab:fab_label="@string/chart_today"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabYesterday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_colorRipple="@color/smokeWhite"
            fab:fab_label="@string/chart_yesterday"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_colorRipple="@color/smokeWhite"
            fab:fab_label="@string/chart_week"
            fab:fab_size="mini" />


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccent"
            fab:fab_colorRipple="@color/smokeWhite"
            fab:fab_label="@string/chart_month"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>


    <ProgressBar
        android:id="@+id/progressGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>