<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.geringan.activdash.activities.ThermostatControllerActivity$PlaceholderFragment">

    <ProgressBar
        android:id="@+id/progressTher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/thermostat_cardView"
        android:layout_width="@dimen/thermostat_display_width"
        android:layout_height="@dimen/thermostat_display_width"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/thermostat_marginTop"
        app:cardBackgroundColor="@color/almostBlack"
        app:cardCornerRadius="@dimen/thermostat_rounded_corner"

        tools:style="@style/CardView">

        <LinearLayout
            android:layout_width="@dimen/thermostat_display_width"
            android:layout_height="@dimen/thermostat_display_height"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/plus_thermostat"
                style="@style/ThermostatControlsStyle"
                android:text="@string/thermostat_plus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/consigne_thermostat"
                style="@style/ThermostatDisplayStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thermostat_consigne" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minus_thermostat"
                style="@style/ThermostatControlsStyle"
                android:text="@string/thermostat_minus" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/thermometer_display_width"
        android:layout_height="@dimen/thermometer_display_height"
        android:layout_below="@id/thermostat_cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/thermometer_marginTop"
        app:cardBackgroundColor="@color/almostBlack"
        app:cardCornerRadius="@dimen/thermostat_rounded_corner"
        tools:style="@style/CardView">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/value_thermometer"
            style="@style/ThermometerDisplayStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thermometer_value" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"


        android:layout_marginBottom="@dimen/thermostat_marginBottom"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thermometer_display_height"

            android:layout_weight="3"
            app:cardBackgroundColor="@color/white"
            tools:style="@style/CardView">

            <LinearLayout
                android:id="@+id/layoutThermostatMode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgThermostatMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_vertical_padding"
                    android:src="@drawable/ic_mode_eco"
                    android:tint="@color/almostBlack" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtThermostatMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/thermostat_mode_name"
                    android:textAlignment="center"

                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thermometer_display_height"
            android:layout_marginLeft="@dimen/thermometer_infos_inner_margin"
            android:layout_marginRight="@dimen/thermometer_infos_inner_margin"
            android:layout_weight="2"
            app:cardBackgroundColor="@color/white"
            tools:style="@style/CardView">

            <LinearLayout
                android:id="@+id/layoutThermostatPlan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_vertical_padding"
                    android:tint="@color/almostBlack"
                    app:srcCompat="@drawable/ic_planning"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtThermostatPlan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/thermostat_plan_name"
                    android:textAlignment="center"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvThermostatEtat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/thermometer_display_height"
            android:layout_weight="3"
            app:cardBackgroundColor="@color/white"
            tools:style="@style/CardView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llThermostatEtat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgThermostatEtat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/activity_vertical_padding"
                    app:srcCompat="@drawable/ic_power" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtThermostatEtat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/thermostat_state_name" />

            </LinearLayout>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgThermostatPwr"
                    android:layout_width="@dimen/mini_icon"
                    android:layout_height="@dimen/mini_icon"
                    android:padding="@dimen/mini_icon_padding"
                    app:srcCompat="@drawable/ic_block"
                    android:layout_alignEnd="@id/llThermostatEtat"
                    android:layout_alignRight="@id/llThermostatEtat" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>